# draad

./: .gitignore  Cargo.toml  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-bun.yml  publish.yml  release.yml
crates/draad/: Cargo.toml
crates/draad-codegen/: Cargo.toml
crates/draad-codegen/src/: bus.rs  config.rs  emit_rust.rs  emit_ts.rs  lib.rs  model.rs  parse.rs  pipeline.rs  rpc_runtime.ts  scan.rs  ty_decl.rs  types.rs  util.rs
crates/draad-codegen/tests/: emit_ts_basic.rs  emit_ts_custom.rs  emit_ts_with_types.rs  rust_to_ts.rs  scanner_bare_attr.rs  scanner_qualified_attr.rs  verbs.rs
crates/draad-codegen/tests/common/: mod.rs
crates/draad-macros/: Cargo.toml
crates/draad-macros/src/: lib.rs
crates/draad/src/: lib.rs  runtime.rs
crates/draad/src/codegen/: config.rs  emit_rust.rs  emit_ts.rs  mod.rs  model.rs  parse.rs  pipeline.rs  rpc_runtime.ts  scan.rs  types.rs  util.rs  writer.rs
crates/draad/src/runtime/: mod.rs  session.rs
crates/draad/tests/: emit_ts_basic.rs  emit_ts_with_types.rs  scanner_bare_attr.rs  scanner_qualified_attr.rs  verbs.rs
crates/draad/tests/common/: mod.rs
examples/hello/: .gitignore  Cargo.toml  build.rs
examples/hello/frontend/: package.json  tsconfig.json
examples/hello/frontend/src/: main.ts
examples/hello/frontend/src/lib/schema/: index.ts
examples/hello/src/: main.rs
examples/hello/src/api/: counter.rs  error.rs  greet.rs  mod.rs  presence.rs  urls.rs
release-action/scripts/: compute-release.sh
