[package]
name = "draad-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal proc-macros for `draad`. Depend on `draad` instead."

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
draad-codegen = { path = "../draad-codegen", version = "0.3.0" }
