[package]
name = "draad"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Trait-driven RPC schema for Rust↔TypeScript. One trait → Axum router + TS client."

[features]
# The `runtime` module: ships `EventBus` and the default `ws_handler`
# so consumers don't have to hand-write the broadcast plumbing or the
# WS upgrade. Opt-in.
runtime = ["dep:axum", "dep:serde", "dep:serde_json", "dep:tokio"]

[dependencies]
draad-macros = { path = "../draad-macros", version = "0.2.0" }
# Re-exported for users who want to drive the codegen from a custom
# `build.rs` instead of the macro path. Pulled transitively by the
# `include_generated!` proc-macro regardless.
draad-codegen = { path = "../draad-codegen", version = "0.2.0" }

# Runtime-only, opt in via the `runtime` feature.
axum = { version = "0.8", optional = true, features = ["ws"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", optional = true, features = ["sync", "macros"] }
