[package]
name = "draad"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Trait-driven RPC schema for Rust↔TypeScript. One trait → Axum router + TS client."

[features]
# The `runtime` module: ships `EventBus`, the default `ws_handler`, and the
# stateful `Session`/`Clients` WebSocket system so consumers don't have to
# hand-write the broadcast plumbing, the WS upgrade, or per-client
# subscriptions. Opt-in.
runtime = [
    "dep:axum",
    "dep:serde",
    "dep:serde_json",
    "dep:tokio",
    "dep:async-trait",
    "dep:futures",
    "dep:uuid",
]

[dependencies]
draad-macros = { path = "../draad-macros", version = "0.3.0" }
# Re-exported for users who want to drive the codegen from a custom
# `build.rs` instead of the macro path. Pulled transitively by the
# `include_generated!` proc-macro regardless.
draad-codegen = { path = "../draad-codegen", version = "0.3.0" }

# Runtime-only, opt in via the `runtime` feature.
axum = { version = "0.8", optional = true, features = ["ws"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", optional = true, features = ["sync", "macros", "rt"] }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
